--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">deScam</string>
+    <string name="input_email">Before we continue, please input your email adress first</string>
+    <string name="email_hint">johndoe@mail.com</string>
+    <string name="submit_email">submit email</string>
 </resources>
