--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="dark_mode">Dark mode</string>
+    <string name="choose_picture">Choose from gallery</string>
+    <string name="choose_another_picture">Choose another picture</string>
 </resources>
