--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,7 @@
     <string name="status">Status :</string>
     <string name="status_value">Legal/Illegal</string>
     <string name="textinput_email_warning">Invalid Email</string>
+    <string name="pref_info">You logged in as</string>
+    <string name="pref_email">example@email.com</string>
+    <string name="logout">Logout</string>
 </resources>
