--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="choose_another_picture">Choose another picture</string>
     <string name="extract_text">Extract text</string>
     <string name="extracted_text_result">[Extracted text result]</string>
+    <string name="result_added">Scan result added to database</string>
     <string name="tab_gallery">Gallery</string>
     <string name="tab_text">Text</string>
     <string name="upload">Upload</string>
